<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dailySleepAverage"
        android:layout_width="410dp"
        android:layout_height="135dp"
        android:layout_marginTop="28dp"
        android:background="@color/lightPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/dailySleepAverageHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/sleep_Avg_Header"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/avgDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleepAverageText"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.622" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/startEndTime"
        android:layout_width="403dp"
        android:layout_height="158dp"
        android:layout_marginTop="32dp"
        android:background="@color/lightPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dailySleepAverage">

        <View
            android:id="@+id/startEndDivider"
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:layout_marginStart="200dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.551" />

        <TextView
            android:id="@+id/endTimeDisplay"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/endTimeDefault"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/startTimeDisplay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toEndOf="@+id/startEndDivider" />

        <TextView
            android:id="@+id/startTimeDisplay"
            android:layout_width="156dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="68dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/startTimeDefault"
            android:textSize="34sp"
            app:layout_constraintEnd_toStartOf="@+id/startEndDivider"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/endLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="232dp"
            android:layout_marginTop="32dp"
            android:text="@string/endTimeHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/startLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/startTimeHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sleepTimeContainer"
        android:layout_width="407dp"
        android:layout_height="106dp"
        android:layout_marginTop="36dp"
        android:background="@color/lightPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startEndTime">

        <TextView
            android:id="@+id/sleepTimeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sleepTimeHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalSleepTimeCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/sleepTimeCalculation"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.737" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/undoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/gray"
        android:text="@string/undo_Btn"
        android:textColor="@color/text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/submitBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="136dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/submit_Btn"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/undoBtn" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="410dp"
        android:layout_height="90dp"
        android:background="@color/darkPurple"
        android:backgroundTint="@color/darkPurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="48dp"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/warning"
        android:layout_width="41dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/warningContentDescriptor"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleepTimeContainer"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/warning" />

    <ImageButton
        android:id="@+id/settingsBtn"
        android:layout_width="53dp"
        android:layout_height="72dp"
        android:layout_marginBottom="28dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toEndOf="@+id/submitBtn"
        app:srcCompat="@drawable/gear" />

    <TextView
        android:id="@+id/undoErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/undoError"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>